[project]
name = "okf-validator"
version = "0.1.0"
description = "Field + graph validator and HTML graph viewer for the SRE OKF vocabulary (see ../VOCABULARY.md)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2,<3",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
okf-validator = "okf_validator.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["okf_validator*"]

[tool.setuptools.package-data]
okf_validator = ["viewer/templates/*.html", "viewer/static/*"]
